--- a/game.html
+++ b/game.html
@@ -24,6 +24,10 @@
         <td class="grid"></td>
     </tr>
     </table>
+    <div id="window">
+        <h2 id="Message"></h2>
+        <button id="retry">RETRY</button>
+    </div>
 <h2 id="win"></h2>
   <script src="game.js"></script>
 </body>
